// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treemap service only root node 1`] = `
Object {
  "attributes": Object {
    "fun": 10,
    "lin": 100,
    "mcc": 1,
  },
  "children": Array [],
  "deltas": undefined,
  "depth": 0,
  "flat": false,
  "height": 2,
  "heightDelta": 0,
  "isLeaf": true,
  "length": 200,
  "link": undefined,
  "markingColor": null,
  "name": "root",
  "origin": undefined,
  "parent": null,
  "path": "/root",
  "visible": undefined,
  "width": 200,
  "x0": 0,
  "y0": 0,
  "z0": 0,
}
`;

exports[`treemap service root node with two direct children 1`] = `
Object {
  "attributes": Object {
    "fun": 10,
    "lin": 100,
    "mcc": 1,
  },
  "children": Array [
    Object {
      "attributes": Object {
        "fun": 10,
        "lin": 100,
        "mcc": 1,
      },
      "children": Array [],
      "deltas": undefined,
      "depth": 1,
      "flat": false,
      "height": 2,
      "heightDelta": 0,
      "isLeaf": true,
      "length": 98.5,
      "link": undefined,
      "markingColor": null,
      "name": "firstChild",
      "origin": undefined,
      "parent": [Circular],
      "path": "/root/firstChild",
      "visible": undefined,
      "width": 198,
      "x0": 1,
      "y0": 1,
      "z0": 2,
    },
    Object {
      "attributes": Object {
        "fun": 10,
        "lin": 100,
        "mcc": 1,
      },
      "children": Array [],
      "deltas": undefined,
      "depth": 1,
      "flat": false,
      "height": 2,
      "heightDelta": 0,
      "isLeaf": true,
      "length": 98.5,
      "link": undefined,
      "markingColor": null,
      "name": "secondChild",
      "origin": undefined,
      "parent": [Circular],
      "path": "/root/secondChild",
      "visible": undefined,
      "width": 198,
      "x0": 1,
      "y0": 100.5,
      "z0": 2,
    },
  ],
  "deltas": undefined,
  "depth": 0,
  "flat": false,
  "height": 2,
  "heightDelta": 0,
  "isLeaf": false,
  "length": 200,
  "link": undefined,
  "markingColor": null,
  "name": "root",
  "origin": undefined,
  "parent": null,
  "path": "/root",
  "visible": undefined,
  "width": 200,
  "x0": 0,
  "y0": 0,
  "z0": 0,
}
`;

exports[`treemap service root node with two direct children and some grand children 1`] = `
Object {
  "attributes": Object {
    "fun": 10,
    "lin": 100,
    "mcc": 1,
  },
  "children": Array [
    Object {
      "attributes": Object {
        "fun": 10,
        "lin": 100,
        "mcc": 1,
      },
      "children": Array [
        Object {
          "attributes": Object {
            "fun": 10,
            "lin": 100,
            "mcc": 1,
          },
          "children": Array [],
          "deltas": undefined,
          "depth": 2,
          "flat": false,
          "height": 2,
          "heightDelta": 0,
          "isLeaf": true,
          "length": 64.33333333333333,
          "link": undefined,
          "markingColor": null,
          "name": "firstGrandChild",
          "origin": undefined,
          "parent": [Circular],
          "path": "/root/firstChild/firstGrandChild",
          "visible": undefined,
          "width": 196,
          "x0": 2,
          "y0": 2,
          "z0": 4,
        },
        Object {
          "attributes": Object {
            "fun": 10,
            "lin": 100,
            "mcc": 1,
          },
          "children": Array [],
          "deltas": undefined,
          "depth": 2,
          "flat": false,
          "height": 2,
          "heightDelta": 0,
          "isLeaf": true,
          "length": 64.33333333333333,
          "link": undefined,
          "markingColor": null,
          "name": "secondGrandChild",
          "origin": undefined,
          "parent": [Circular],
          "path": "/root/firstChild/secondGrandChild",
          "visible": undefined,
          "width": 196,
          "x0": 2,
          "y0": 67.33333333333333,
          "z0": 4,
        },
      ],
      "deltas": undefined,
      "depth": 1,
      "flat": false,
      "height": 2,
      "heightDelta": 0,
      "isLeaf": false,
      "length": 131.66666666666666,
      "link": undefined,
      "markingColor": null,
      "name": "firstChild",
      "origin": undefined,
      "parent": [Circular],
      "path": "/root/firstChild",
      "visible": undefined,
      "width": 198,
      "x0": 1,
      "y0": 1,
      "z0": 2,
    },
    Object {
      "attributes": Object {
        "fun": 10,
        "lin": 100,
        "mcc": 1,
      },
      "children": Array [],
      "deltas": undefined,
      "depth": 1,
      "flat": false,
      "height": 2,
      "heightDelta": 0,
      "isLeaf": true,
      "length": 65.33333333333334,
      "link": undefined,
      "markingColor": null,
      "name": "secondChild",
      "origin": undefined,
      "parent": [Circular],
      "path": "/root/secondChild",
      "visible": undefined,
      "width": 198,
      "x0": 1,
      "y0": 133.66666666666666,
      "z0": 2,
    },
  ],
  "deltas": undefined,
  "depth": 0,
  "flat": false,
  "height": 2,
  "heightDelta": 0,
  "isLeaf": false,
  "length": 200,
  "link": undefined,
  "markingColor": null,
  "name": "root",
  "origin": undefined,
  "parent": null,
  "path": "/root",
  "visible": undefined,
  "width": 200,
  "x0": 0,
  "y0": 0,
  "z0": 0,
}
`;
